# lean-multi-agent

./: .env.example  .env.template  .gitignore  Data  MANIFEST.in  PHASE5_SUMMARY.md  PROJECT_STATUS.md  README.md  config.json  config_alpha_model.json  config_daily_template.json  config_macd.json  docker-compose.yml  download_data.py  lean_multi_agent.py  pytest.ini  requirements.txt  run.sh  setup.py  setup.sh  start_dashboard.sh  test_alpha_model.sh  test_builtin_python.sh  test_daily_template.sh  test_macd.sh  test_news_agent_quick.py
.github/workflows/: tests.yml
Agents/: __init__.py  base_mcp_agent.py  decision_makers.py  layered_scheduler.py  llm_config.py  macro_agent.py  meta_agent.py  news_agent.py  sector_agent.py  technical_agent.py
Agents/core/: __init__.py  base_agent.py  macro_agent.py  news_agent.py  sector_agent.py  technical_agent.py
Agents/orchestration/: __init__.py  (+3 more)
Algorithm/: SmartAlgorithm.py
Backtests/: __init__.py  vectorbt_engine.py
Configs/: config_ema_channel.json  logging.yaml  logging_config.py  logging_prod.yaml
Data/: finnhub_client.py
Memory/: __init__.py  escalation.py  schemas.py  sql_store.py  state_manager.py  vector_store.py
Tests/: test_comprehensive_system.py  test_daily_template.sh  test_macd.sh
Utils/: README.md  auto_download_data.py  download_data.py  execution_logger.py
archive/: dashboard.py  intraday_simple.py  lean_multi_agent.py  pyproject.toml
archive/Agents/core/: sector_agent.py  technical_agent.py
archive/Agents/mcp/: macro_agent_mcp_wrapper.py  news_agent_mcp_wrapper.py
archive/Agents/orchestration/: layered_scheduler.py  meta_agent.py
archive/Agents/utils/: llm_config.py  tool_registry.py
archive/Algorithm/: BasicTemplateAlgorithmDaily.py  EMAChannelStrategy.py  SmartAlgorithm.py  __init__.py
archive/Backtests/: __init__.py  vectorbt_engine.py
archive/Backtests/strategies/: multi_agent_strategy.py
archive/Configs/: config_daily_template.json  logging_backtest.yaml  logging_dev.yaml
archive/Data/: README.md
archive/Data/sql/: trading_memory.db
archive/Memory/: sql_store.py
archive/Tests/: test_alpha_model.sh  test_backtest.py  test_comprehensive_system.py  test_ema_channel.sh
archive/Tests/integration/: test_backtest_integration.py  test_decision_workflow.py
archive/Tests/unit/: __init__.py
archive/Tests/unit/agents/core/: test_news_agent.py  test_technical_agent.py
archive/Tests/unit/agents/orchestration/: __init__.py  test_decision_makers.py  test_meta_agent.py
archive/Tests/unit/agents/utils/: __init__.py
archive/Tests/unit/backtests/: __init__.py
archive/Tests/unit/memory/: __init__.py  test_schemas.py  test_sql_store.py  test_state_manager.py
archive/Utils/: __init__.py  auto_download_data.py  show_backtest_results.py
archive/docs/: ARCHITECTURE_DETAILED_EXPLANATION.md  DATA_FORMAT_IMPROVEMENT.md  INSTALL.md  LEAN_INTEGRATION_ANALYSIS.md  LOGGING_GUIDE.md  MINUTE_DATA_GUIDE.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_PLAN.md  YAHOO_BATCH_DOWNLOAD.md
archive/examples/: layered_strategy_backtest.py
backend/: README.md  __init__.py
docs/: ARCHITECTURE_DETAILED_EXPLANATION.md  DASHBOARD.md  DECISION_RECORD_USAGE.md  DISCUSSION_SUMMARY.md  DISCUSSION_SUMMARY_SHORT.md  IMPLEMENTATION_ROADMAP.md  MACRO_AGENT_USAGE.md
examples/: layered_strategy_backtest.py  llm_config_usage.py
frontend/: README.md  dashboard.py
scripts/: project_summary.py  strategy_comparison.py
(+84 files in other folders)
